--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -4,7 +4,7 @@ alias maxframes "exec ./gfx/maxframes"
 alias highframes "exec ./gfx/highframes"
 alias dx9frames "exec ./gfx/dx9frames"
 alias highquality "exec ./gfx/highquality"
-alias maxquality "exec ./gfx/maxfquality"
+alias maxquality "exec ./gfx/maxquality"
 alias m0refps "exec ./gfx/m0refps"
 alias m0rehighfps "exec ./gfx/m0rehighfps"
 
