--- a/cfg/config.cfg
+++ b/cfg/config.cfg
@@ -163,7 +163,7 @@ lookstrafe "0"
 joystick "0"
 m_pitch "0.022"
 m_filter "0"
-sensitivity "3"
+sensitivity "3.59"
 m_side "0.8"
 m_yaw "0.022"
 m_forward "1"
@@ -187,16 +187,16 @@ net_graphshowinterp "1"
 net_graph "1"
 net_graphheight "20"
 net_graphproportionalfont "0"
-viewmodel_fov "105"
+viewmodel_fov "95"
 mat_viewportscale "1"
 mat_viewportupscale "1"
 cl_software_cursor "0"
-mat_software_aa_strength "0.000000"
-mat_software_aa_quality "0"
-mat_software_aa_edge_threshold "1.0"
+mat_software_aa_strength "2"
+mat_software_aa_quality "2"
+mat_software_aa_edge_threshold "0.8"
 mat_software_aa_blur_one_pixel_lines "0.5"
 mat_software_aa_tap_offset "1.0"
-mat_software_aa_strength_vgui "1.000000"
+mat_software_aa_strength_vgui "2"
 pyro_vignette "2"
 pyro_vignette_distortion "1"
 pyro_min_intensity "0.1"
@@ -207,7 +207,7 @@ pyro_min_side_length "0.3"
 pyro_max_side_length "0.55"
 pyro_min_side_width "0.65"
 pyro_max_side_width "0.95"
-r_drawviewmodel "1"
+r_drawviewmodel "0"
 pyro_dof "1"
 voice_modenable "1"
 hud_fastswitch "1"
@@ -366,7 +366,7 @@ cl_use_tournament_specgui "0"
 cl_training_completed_with_classes "0"
 tf_medigun_autoheal "0"
 hud_medicautocallers "1"
-hud_medicautocallersthreshold "75"
+hud_medicautocallersthreshold "0"
 hud_medichealtargetmarker "0"
 tf_sniper_fullcharge_bell "0"
 cl_crosshaircolor "0"
@@ -409,10 +409,10 @@ sk_autoaim_mode "1"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_specaccelerate "5"
-sv_specspeed "10"
+sv_specspeed "3"
 sv_specnoclip "1"
 sv_backspeed "0.6"
-sv_skyname "sky_day01_01"
+sv_skyname "sky_dustbowl_01"
 tf_server_identity_token ""
 tf_server_identity_account_id "0"
 tf_server_identity_disable_quickplay "0"
@@ -438,8 +438,8 @@ snd_mute_losefocus "1"
 voice_scale "1"
 voice_enable "1"
 voice_forcemicrecord "1"
-name "Okai"
-password ""
+name "he told u hes gozila"
+password "bumpthatamp"
 cl_clanid "0"
 sv_unlockedchapters "99"
 tv_nochat "0"
