Changes to class configs
Added an <class>_aliases.cfg for each class.
Moved all aliases to the <class>_aliases.cfg file
Added demoknight.cfg for demoknight charging script.
Removed sdk.cfg, trashcan.cfg and mtp.cfg

--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -10,7 +10,8 @@ alias m0rehighfps "exec ./gfx/m0rehighfps"
 
 //Chris Highframes config
 highframes
-exec ./okai/cfg
+//highquality
+//exec ./okai/cfg
 
 //Protection, no pinion
 exec ./okai/protection
@@ -50,6 +51,13 @@ alias medic_cfg "alias reload_cfg medic;         exec ./okai/medic"
 alias sniper_cfg "alias reload_cfg sniper;       exec ./okai/sniper"
 alias spy_cfg "alias reload_cfg spy;             exec ./okai/spy"
 
+//aim
+alias aim "map tr_aim"
+alias walkway "map tr_walkway_rc2"
+alias trixshoot "setpos 5353.430664 2562.021973 -4875.968750;setang -48.878178 -1.663186 0.000000"
+
+alias obama "exec ch"
+
 //cvars
 hud_fastswitch 1
 hud_combattext 1
@@ -67,6 +75,8 @@ cl_autorezoom 0
 hud_medicautocallers 1
 volume 0.1
 fps_max 120
+jpeg_quality 100
+cl_hud_minmode 1
 
 //Offline fun
 alias fun "hurtme -90000; addcond 11; addcond 5; bind b regen; bind alt +noclip; alias fp firstperson; alias tp thirdperson"
@@ -213,7 +223,7 @@ alias cancelmovement "-attack; -attack2; -forward; -back; -duck; -right; -left; 
 //Shows net graph when viewing scores
 bind tab "+showscores"
 bind tab "+showgraph"
-alias "+showgraph" "+showscores;net_graph 3;r_renderoverlayfragment 1"
+alias "+showgraph" "+showscores;net_graph 3;r_renderoverlayfragment 1; mp_showrespawntimes"
 alias "-showgraph" "-showscores;net_graph 1;r_renderoverlayfragment 0"
 
 //P-rec
