--- a/cfg/okai/engineer.cfg
+++ b/cfg/okai/engineer.cfg
@@ -1,14 +1,18 @@
+//Executing the aliases
+exec ./okai/engineer_aliases
+
+//Cancels movement
 cancelmovement
+
+//Console variables that can change
 viewmodel_fov 95
 sensitivity 3.59
- 
-exec ./okai/engineer_binds
- 
-//Jump and grab script:
-alias "+crouchjump" "+attack2; +jump; +duck"
-alias "-crouchjump" "-attack2; -jump"
-alias "+fire" "lastinv; +attack2"
-alias "-fire" "-attack2; -duck"
+cl_autoreload 1
+r_drawviewmodel 0
 
+//Executing the binds
+exec ./okai/engineer_binds
+
+//Confirms that correct cfg loaded
 echo "executing engineer.cfg"
 cc_emit #Engineer.Loaded
