--- a/cfg/okai/medic.cfg
+++ b/cfg/okai/medic.cfg
@@ -1,18 +1,21 @@
+//Executing the aliases
+exec ./okai/medic_aliases
+
+//Cancels movement
 cancelmovement
+
+//Console variables that can change
 viewmodel_fov 105
 sensitivity 3.59
+cl_autoreload 1
+r_drawviewmodel 0
 
-alias "autocall_default" "hud_medicautocallersthreshold 0"
-alias "autocall_all" "hud_medicautocallersthreshold 300"
-alias "+radar" "autocall_all"
-alias "-radar" "autocall_default"
-
-exec ./okai/medic_binds
-
-alias "autoheal_1" "exec ./okai/autoheal_on"
-alias "autoheal_0" "exec ./okai/autoheal_off"
-
+//Autoheal on
 autoheal_1
 
+//Executing the binds
+exec ./okai/medic_binds
+
+//Confirms that correct cfg loaded
 echo "executing medic.cfg"
 cc_emit #Medic.Loaded
