--- a/cfg/okai/scout.cfg
+++ b/cfg/okai/scout.cfg
@@ -1,8 +1,18 @@
-cancelmovement
-viewmodel_fov 95
-sensitivity 3.59
+//Executing the aliases
+exec ./okai/scout_aliases
 
+//Cancels movement
+cancelmovement
+
+//Console variables that can change
+viewmodel_fov 95
+sensitivity 2.7
+cl_autoreload 1
+r_drawviewmodel 1
+
+//Executing the binds
 exec ./okai/scout_binds
 
+//Confirms that correct cfg loaded
 echo "executing scout.cfg"
 cc_emit #Scout.Loaded
