--- a/cfg/okai/sniper.cfg
+++ b/cfg/okai/sniper.cfg
@@ -1,9 +1,18 @@
+//Executing the aliases
+exec ./okai/sniper_aliases
+
+//Cancels movement
 cancelmovement
 
+//Console variables that can change
 viewmodel_fov 105
-sensitivity 3
+sensitivity 2.7
+cl_autoreload 1
+r_drawviewmodel 1
 
+//Executing the binds
 exec ./okai/sniper_binds
 
+//Confirms that correct cfg loaded
 echo "executing sniper.cfg"
 cc_emit #Sniper.Loaded
