--- a/cfg/okai/soldier.cfg
+++ b/cfg/okai/soldier.cfg
@@ -1,10 +1,18 @@
-scout_cfg
+//Executing the aliases
+exec ./okai/soldier_aliases
 
+//Cancels movement
 cancelmovement
+
+//Console variables that can change
 viewmodel_fov 80
 sensitivity 3.59
+cl_autoreload 1
+r_drawviewmodel 1
 
+//Executing the binds
 exec ./okai/soldier_binds
 
+//Confirms that correct cfg loaded
 echo "executing soldier.cfg"
 cc_emit #Soldier.Loaded
