--- a/cfg/okai/vmsettings.cfg
+++ b/cfg/okai/vmsettings.cfg
@@ -63,6 +63,11 @@ alias v_1_1_0_slot2bind "bind 2 v_1_1_0_slot2alias"
 alias v_1_1_0_slot3bind "bind 3 v_1_1_0_slot3alias"
 alias v_1_1_0_bind "v_1_1_0_slot1bind; v_1_1_0_slot2bind; v_1_1_0_slot3bind"
 
+alias v_reset_slot1bind "bind 1 slot1"
+alias v_reset_slot2bind "bind 2 slot2"
+alias v_reset_slot3bind "bind 3 slot3"
+alias v_reset_bind "v_reset_slot1bind; v_reset_slot2bind; v_reset_slot3bind"
+
 alias v_1_1_1 "v_1_1_1_bind" //All on
 alias v_0_0_0 "v_0_0_0_bind" //All off
 
@@ -73,3 +78,5 @@ alias v_0_0_1 "v_0_0_1_bind" //Only melee on
 alias v_0_1_1 "v_0_1_1_bind" //Only primary off
 alias v_1_0_1 "v_1_0_1_bind" //Only secondary off
 alias v_1_1_0 "v_1_1_0_bind" //Only melee off
+
+alias v_reset "v_reset_bind" //Resets the binds
