--- a/cfg/gfx/highframes.cfg
+++ b/cfg/gfx/highframes.cfg
@@ -32,7 +32,7 @@
 // ----------------------------------------------------------------------------
 cl_showfps 1 // Show unsmoothed FPS meter
 //fps_max 121 // Commented due to 2011-09-02 update causing jittering when fps is capped for some
-fps_max 0
+fps_max 121
 
 // ----------------------------------------------------------------------------
 // Net settings
@@ -111,6 +111,7 @@ r_shadows 0
                             // near the other side of a wall. You may see some
                             // performance loss from setting this to `1'.
 //r_shadows 1
+
 
 // ----------------------------------------------------------------------------
 // Facial features
@@ -275,7 +276,7 @@ in_usekeyboardsampletime 0
 mat_clipz 1 // FX card users should set this to 0
 mat_forcehardwaresync 0
 mat_levelflush 1
-//m_rawinput 1 // Turn on raw mouse input. Commented out by default due to
+m_rawinput 1 // Turn on raw mouse input. Commented out by default due to
                // silly incompatibility with the Xfire overlay. You should use
                // it if you can!
 mat_vsync 0 // Turn off vsync to avoid nasty I/O latency.
@@ -308,7 +309,7 @@ snd_spatialize_roundrobin 1
 // ----------------------------------------------------------------------------
 // Threading
 // ----------------------------------------------------------------------------
-mat_queue_mode 2 // mat_queue mode is another frequently asked about cvar, it
+mat_queue_mode -1 // mat_queue mode is another frequently asked about cvar, it
                  // defines the threading method to be used by the material
                  // system. It has been unstable to use in the past, but
                  // nowadays it's generally okay.
@@ -340,7 +341,7 @@ r_threaded_renderables 1
 // ----------------------------------------------------------------------------
 // Misc
 // ----------------------------------------------------------------------------
-cl_forcepreload 1 // Force preloading
+cl_forcepreload 0 // Force preloading ****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************
 
 // ----------------------------------------------------------------------------
 // Print to console
