--- a/cfg/okai/demoman.cfg
+++ b/cfg/okai/demoman.cfg
@@ -1,52 +1,24 @@
+//Executing the aliases
+exec ./okai/demoman_aliases
+
+//Demoknight
+exec ./okai/demoknight
+
+//Cancels movement
 cancelmovement
+
+//Console variables that can change
 viewmodel_fov 105
 sensitivity 3.59
+cl_autoreload 1
+r_drawviewmodel 1
 
-exec ./okai/demoman_binds
-
-alias +m2 "+attck2"
-alias -m2 "-attck2"
-
-// Charge script
-alias setstrafe "joystick 0; m_yaw 0.022"
-alias setturn "joystick 1; m_yaw 0"
-
-setstrafe // Gamepad off by default.
-
-alias +attck2 "+attack2; setturn"
-alias -attck2 "-attack2; setstrafe"
-
-alias demoknight_on "bind mouse2 +m2"
-alias demoknight_off "bind mouse2 +attack2"
-
-joy_yawsensitivity -50 // Turn sensitivity
-
-// Gamepad configuration, copied from 360controller.cfg
-joy_name "VJoy controller"
-joy_advanced 1
-joy_advaxisx 0
-joy_advaxisy 0
-joy_advaxisz 0
-joy_advaxisr 0
-joy_advaxisu 4
-joy_advaxisv 0
-joy_forwardsensitivity -1
-joy_sidesensitivity 1
-joy_pitchsensitivity 1.0
-joy_accelscale 2.0
-joy_accelmax 0
-joy_response_move 0
-joy_response_look 1
-joyadvancedupdate
-
-+jlook
-
-// Set joystick to linear.
-joy_yawthreshold 0
-joy_lowend 1
-joy_lowmap 1
-
+//No demoknighting
 demoknight_off
 
+//Executing the binds
+exec ./okai/demoman_binds
+
+//Confirms that correct cfg loaded
 echo "executing demoman.cfg"
 cc_emit #Demoman.Loaded
