--- a/cfg/okai/engineer_binds.cfg
+++ b/cfg/okai/engineer_binds.cfg
@@ -44,6 +44,7 @@ bind "v" "+voicerecord"
 bind "b" ""
 bind "n" "open_charinfo_backpack"
 bind "m" "open_charinfo_direct"
+bind "SPACE" "+jump"
 
 //Left side of the keyboard
 bind "ESCAPE" "cancelselect"
