--- a/cfg/okai/heavyweapons.cfg
+++ b/cfg/okai/heavyweapons.cfg
@@ -1,8 +1,18 @@
+//Executing the aliases
+exec ./okai/heavyweapons_aliases
+
+//Cancels movement
 cancelmovement
+
+//Console variables that can change
 viewmodel_fov 90
 sensitivity 3.59
+cl_autoreload 1
+r_drawviewmodel 0
 
+//Executing the binds
 exec ./okai/heavyweapons_binds
 
+//Confirms that correct cfg loaded
 echo "executing heavyweapons.cfg"
 cc_emit #Heavy.Loaded
