--- a/cfg/okai/pyro.cfg
+++ b/cfg/okai/pyro.cfg
@@ -1,8 +1,18 @@
+//Executing the aliases
+exec ./okai/pyro_aliases
+
+//Cancels movement
 cancelmovement
+
+//Console variables that can change
 viewmodel_fov 105 
 sensitivity 3.59
+cl_autoreload 1
+r_drawviewmodel 1
 
+//Executing the binds
 exec ./okai/pyro_binds
 
+//Confirms that correct cfg loaded
 echo "executing pyro.cfg"
 cc_emit #Pyro.Loaded
