--- a/cfg/okai/pyro_binds.cfg
+++ b/cfg/okai/pyro_binds.cfg
@@ -44,6 +44,7 @@ bind "v" "+voicerecord"
 bind "b" ""
 bind "n" "open_charinfo_backpack"
 bind "m" "open_charinfo_direct"
+bind "SPACE" "+jump"
 
 //Left side of the keyboard
 bind "ESCAPE" "cancelselect"
@@ -52,7 +53,7 @@ bind "TAB" "+showgraph"
 bind "CAPSLOCK" ""
 bind "SHIFT" "+qwep"
 bind "CTRL" "+duck"
-bind "ALT" ""
+bind "ALT" "+panic"
 
 //Right side of the keyboard
 bind "-" ""
