--- a/cfg/okai/spy.cfg
+++ b/cfg/okai/spy.cfg
@@ -1,18 +1,21 @@
-cancelmovement
-viewmodel_fov 105
-sensitivity 3.59
+//Executing the aliases
+exec ./okai/spy_aliases
 
+//Cancels movement
+cancelmovement
+
+//Console variables that can change
+viewmodel_fov 90
+sensitivity 3.59
+cl_autoreload 0
+r_drawviewmodel 0
+
+//No stabby configs
+stabby_0
+
+//Executing the binds
 exec ./okai/spy_binds
 
-alias "stabby_1" "exec ./okai/stabbyspy"
-alias "stabby_0" "exec ./okai/stabby_off"
-
-stabby_0
-rld_0
-
-//Ambassador Zoom Script
-alias "+ambyzoom" "fov_desired 75; sensitivity 2.0"
-alias "-ambyzoom" "fov_desired 90; sensitivity 3.590000"
-
+//Confirms that correct cfg loaded
 echo "executing spy.cfg"
 cc_emit #Spy.Loaded
