--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -1,4 +1,5 @@
 //Executes
+// -------------------------------------------------------
 //Graphical configs
 alias maxframes "exec ./gfx/maxframes"
 alias highframes "exec ./gfx/highframes"
@@ -7,10 +8,7 @@ alias highquality "exec ./gfx/highquality"
 alias maxquality "exec ./gfx/maxquality"
 alias m0refps "exec ./gfx/m0refps"
 alias m0rehighfps "exec ./gfx/m0rehighfps"
-
-//Chris Highframes config
 highframes
-//highquality
 //exec ./okai/cfg
 
 //Protection, no pinion
@@ -41,24 +39,38 @@ alias "sniper" "exec sniper"
 alias "spy" "exec spy"
 alias "spectator" "exec spectator"
 
-alias scout_cfg "alias reload_cfg scout;         exec ./okai/scout"
-alias soldier_cfg "alias reload_cfg soldier;     exec ./okai/soldier"
-alias pyro_cfg "alias reload_cfg pyro;           exec ./okai/pyro"
-alias demoman_cfg "alias reload_cfg demoman;     exec ./okai/demoman"
-alias heavyweapons_cfg "alias reload_cfg heavy;  exec ./okai/heavyweapons"
-alias engineer_cfg "alias reload_cfg engineer;   exec ./okai/engineer"
-alias medic_cfg "alias reload_cfg medic;         exec ./okai/medic"
-alias sniper_cfg "alias reload_cfg sniper;       exec ./okai/sniper"
-alias spy_cfg "alias reload_cfg spy;             exec ./okai/spy"
+alias scout_cfg "alias reload_cfg scout;         exec ./okai/pre; exec ./okai/scout"
+alias soldier_cfg "alias reload_cfg soldier;     exec ./okai/pre; exec ./okai/soldier"
+alias pyro_cfg "alias reload_cfg pyro;           exec ./okai/pre; exec ./okai/pyro"
+alias demoman_cfg "alias reload_cfg demoman;     exec ./okai/pre; exec ./okai/demoman"
+alias heavyweapons_cfg "alias reload_cfg heavy;  exec ./okai/pre; exec ./okai/heavyweapons"
+alias engineer_cfg "alias reload_cfg engineer;   exec ./okai/pre; exec ./okai/engineer"
+alias medic_cfg "alias reload_cfg medic;         exec ./okai/pre; exec ./okai/medic"
+alias sniper_cfg "alias reload_cfg sniper;       exec ./okai/pre; exec ./okai/sniper"
+alias spy_cfg "alias reload_cfg spy;             exec ./okai/pre; exec ./okai/spy"
+// -------------------------------------------------------
 
-//aim
+//Practising
+// -------------------------------------------------------
 alias aim "map tr_aim"
 alias walkway "map tr_walkway_rc2"
-alias trixshoot "setpos 5353.430664 2562.021973 -4875.968750;setang -48.878178 -1.663186 0.000000"
+// -------------------------------------------------------
 
-alias obama "exec ch"
+//Crosshairs
+// -------------------------------------------------------
+alias defaultxhair       "exec ./okai/defaultcrosshair"
+alias +W/.               "cl_crosshair_file crosshair1"
+alias +W/oTop            "cl_crosshair_file crosshair2"
+alias +W/o.              "cl_crosshair_file crosshair6"
+alias o                  "cl_crosshair_file crosshair3"
+alias x                  "cl_crosshair_file crosshair4"
+alias .                  "cl_crosshair_file crosshair5"
+alias +                  "cl_crosshair_file crosshair7"
+alias o                  "cl_crosshair_file crosshair3"
+// -------------------------------------------------------
 
-//cvars
+//Differences
+// -------------------------------------------------------
 hud_fastswitch 1
 hud_combattext 1
 tf_dingalingaling 1
@@ -77,34 +89,19 @@ volume 0.1
 fps_max 120
 jpeg_quality 100
 cl_hud_minmode 1
-
-//Offline fun
-alias fun "hurtme -90000; addcond 11; addcond 5; bind b regen; bind alt +noclip; alias fp firstperson; alias tp thirdperson"
-
-//Crosshairs
-alias defaultxhair       "exec ./okai/defaultcrosshair"
-alias +W/.               "cl_crosshair_file crosshair1"
-alias +W/oTop            "cl_crosshair_file crosshair2"
-alias +W/o.              "cl_crosshair_file crosshair6"
-alias o                  "cl_crosshair_file crosshair3"
-alias x                  "cl_crosshair_file crosshair4"
-alias .                  "cl_crosshair_file crosshair5"
-alias +                  "cl_crosshair_file crosshair7"
-alias o                  "cl_crosshair_file crosshair3"
-
-//Class switching on numpad
-bind KP_END "join_class scout"
-bind KP_DOWNARROW "join_class soldier"
-bind KP_PGDN "join_class pyro"
-bind KP_LEFTARROW "join_class demoman"
-bind KP_5 "join_class heavyweapons"
-bind KP_RIGHTARROW "join_class engineer"
-bind KP_HOME "join_class medic"
-bind KP_UPARROW "join_class sniper"
-bind KP_PGUP "join_class spy"
-bind uparrow "join_class random"
+cl_use_tournament_specgui 1
+cl_crosshair_scale 28
+hud_classautokill 0
+defaultxhair
+tf_dingaling_pitchmaxdmg 97
+tf_dingaling_pitchmindmg 120
+//Hitsound Dog
+//tf_dingaling_pitchmaxdmg 30
+//tf_dingaling_pitchmindmg 90
+// -------------------------------------------------------
 
 //Crosshair colors
+// -------------------------------------------------------
 alias red       "cl_crosshair_red 255; cl_crosshair_green 0;   cl_crosshair_blue 0"
 alias green     "cl_crosshair_red 0;   cl_crosshair_green 255; cl_crosshair_blue 0"
 alias blue      "cl_crosshair_red 0;   cl_crosshair_green 0;   cl_crosshair_blue 255"
@@ -120,113 +117,137 @@ alias black     "cl_crosshair_red 0;   cl_crosshair_green 0;   cl_crosshair_blue
 alias grey      "cl_crosshair_red 128; cl_crosshair_green 128; cl_crosshair_blue 128"
 alias white     "cl_crosshair_red 255; cl_crosshair_green 255; cl_crosshair_blue 255"
 alias stock     "cl_crosshair_red 200; cl_crosshair_green 200; cl_crosshair_blue 200"
+// -------------------------------------------------------
 
-
-// Voice menu cycling
+//Voice menu cycling
+// -------------------------------------------------------
 //alias voicemenucycle voicem1
 //alias voicem1 "voice_menu_1; alias voicemenucycle voicem2"
 //alias voicem2 "voice_menu_2; alias voicemenucycle voicem3"
 //alias voicem3 "voice_menu_3; alias voicemenucycle voicem1"
 //bind z voicemenucycle
-
-//Auto reload
-alias rld_1 "cl_autoreload 1"
-alias rld_0 "cl_autoreload 0"
+// -------------------------------------------------------
 
 //Corpse toggle
-alias c_t c_e
-alias c_e "exec ./okai/corpseson; alias c_t c_d"
-alias c_d "exec ./okai/corpsesoff; alias c_t c_e"
+// -------------------------------------------------------
+alias corpse_toggle corpses_enabled
+alias corpses_enabled "exec ./okai/corpseson; alias corpse_toggle corpses_disabled"
+alias corpses_disabled "exec ./okai/corpsesoff; alias corpse_toggle corpses_enabled"
+// -------------------------------------------------------
 
 //Blocky/blurry toggle
+// -------------------------------------------------------
 alias blurryblockytoggle blocky
-alias blocky "mat_filterlightmaps 0; mat_filtertextures 0; cc_emit #blocky ;alias blurryblockytoggle blurry"
-alias blurry "mat_filterlightmaps 1; mat_filtertextures 1; cc_emit #blurry ;alias blurryblockytoggle blocky"
+alias blocky "mat_filterlightmaps 0; mat_filtertextures 0; cc_emit #blocky; alias blurryblockytoggle blurry"
+alias blurry "mat_filterlightmaps 1; mat_filtertextures 1; cc_emit #blurry; alias blurryblockytoggle blocky"
+// -------------------------------------------------------
 
 //Firstperson
+// -------------------------------------------------------
 alias person fperson
 alias fperson "cl_first_person_uses_world_model 1; tf_taunt_first_person 1; alias person tperson"
 alias tperson "cl_first_person_uses_world_model 0; tf_taunt_first_person 0; alias person fperson
+// -------------------------------------------------------
 
 
 //Wait Testing Script
+// -------------------------------------------------------
 alias wait_check "alias wait_state wait_true; wait_change; wait_state"
 alias wait_change "wait; alias wait_state wait_false"
 alias waitenabled "echo Wait command enabled on server - scripts will have full functionality."
 alias waitdisabled "echo WAIT COMMAND DISABLED ON SERVER - SCRIPTS WILL HAVE LIMITED FUNCTIONALITY!"
-alias wait_true waitenabled
-alias wait_false waitdisabled
+alias wait_true "waitenabled; bind space +bhop; cc_emit #wait.enabled"
+alias wait_false "waitdisabled; bind space +jump; cc_emit #wait.disabled"
+// -------------------------------------------------------
 
-// Crosshair
-cl_crosshair_scale 28
-defaultxhair
-
-//Hitsound Dog
-//tf_dingaling_pitchmaxdmg 30
-//tf_dingaling_pitchmindmg 90
-//Hitsound Beep bep
-tf_dingaling_pitchmaxdmg 97
-tf_dingaling_pitchmindmg 120
+//Bunny hop scripts
+// -------------------------------------------------------
+alias bhop_bind "+jump; wait 2; -jump; wait 2; bhop_jump"
+alias bhop_alias "alias bhop_jump bhop_bind"
+alias bhop_stop "alias bhop_jump"
+alias +bhop "bhop_alias; bhop_jump"
+alias -bhop "bhop_stop; -jump"
+alias wheelhop "bind mwheelup +jump; bind mwheeldown +jump"
+// -------------------------------------------------------
 
 //Jailbreak stuff
-//Remove red ammo exept melee
+// -------------------------------------------------------
+//Remove RED ammo
 alias remove_red_ammo "sm_setclip @red 1 0; sm_setclip @red 2 0; sm_setammo @red 1 0; sm_setammo @red 2 0; cc_emit #red.ammo.remove"
-//Remove blu ammo exept melee
+//Remove BLU ammo
 alias remove_blu_ammo "sm_setclip @blue 1 0; sm_setclip @blue 2 0; sm_setammo @blue 1 0; sm_setammo @blue 2 0; cc_emit #blu.ammo.remove"
-//Ghost
-//alias ghost "sm_respawn @me; sm_noclip @me; sm_rweapons @me"
-//Ghost with ammo
-//alias ghost_ammo "sm_respawn @me; sm_noclip @me"
-//tp/fp switch
+//Switching between 1st and 3rd person
 alias personswitch 1stperson
 alias 1stperson "tp; alias personswitch 3rdperson"
 alias 3rdperson "fp; alias personswitch 1stperson"
+// -------------------------------------------------------
 
+//Grab server info
+// -------------------------------------------------------
+alias sm_help_cycle sm_help_0
+alias sm_help_0  "sm_help; alias sm_help_cycle sm_help_1"
+alias sm_help_1  "sm_help 1; alias sm_help_cycle sm_help_2"
+alias sm_help_2  "sm_help 2; alias sm_help_cycle sm_help_3"
+alias sm_help_3  "sm_help 3; alias sm_help_cycle sm_help_4"
+alias sm_help_4  "sm_help 4; alias sm_help_cycle sm_help_5"
+alias sm_help_5  "sm_help 5; alias sm_help_cycle sm_help_6"
+alias sm_help_6  "sm_help 6; alias sm_help_cycle sm_help_7"
+alias sm_help_7  "sm_help 7; alias sm_help_cycle sm_help_8"
+alias sm_help_8  "sm_help 8; alias sm_help_cycle sm_help_9"
+alias sm_help_9  "sm_help 9; alias sm_help_cycle sm_help_10"
+alias sm_help_10 "sm_help 10; alias sm_help_cycle sm_help_11"
+alias sm_help_11 "sm_help 11; alias sm_help_cycle sm_help_0"
 
-// grab server info
+alias sm_plugins_cycle sm_plugins_00
+alias sm_plugins_00 "sm plugins; alias sm_plugins_cycle sm_plugins_11"
+alias sm_plugins_11 "sm plugins 11; alias sm_plugins_cycle sm_plugins_22"
+alias sm_plugins_22 "sm plugins 22; alias sm_plugins_cycle sm_plugins_33"
+alias sm_plugins_33 "sm plugins 33; alias sm_plugins_cycle sm_plugins_44"
+alias sm_plugins_44 "sm plugins 44; alias sm_plugins_cycle sm_plugins_55"
+alias sm_plugins_55 "sm plugins 55; alias sm_plugins_cycle sm_plugins_66"
+alias sm_plugins_66 "sm plugins 66; alias sm_plugins_cycle sm_plugins_77"
+alias sm_plugins_77 "sm plugins 77; alias sm_plugins_cycle sm_plugins_88"
+alias sm_plugins_88 "sm plugins 88; alias sm_plugins_cycle sm_plugins_99"
+alias sm_plugins_99 "sm plugins 99; alias sm_plugins_cycle sm_plugins_00"
+
 alias "sv" "tf_weapon_criticals; tf_use_fixed_weaponspreads; tf_damage_disablespread; sv_alltalk; tf_allow_player_use; sv_allow_wait_command; tf_arena_first_blood; tf_ctf_bonus_time; sv_pure; sm plugins; sm_help; timeleft"
+// -------------------------------------------------------
 
-//Joystick sensitivity toggle
-//alias joy2 "joy_yawsensitivity -2; cc_emit #joy2"
-//alias joy15 "joy_yawsensitivity -1.5; cc_emit #joy15"
-//alias joy1 "joy_yawsensitivity -1; cc_emit #joy1"
-//alias joyswitch sens15
-//alias sens15 "joy15; alias joyswitch sens2"
-//alias sens2 "joy2; alias joyswitch sens1"
-//alias sens1 "joy1; alias joyswitch sens15"
-
-//No Slaying on class change
-hud_classautokill 0
-
-//Noclip. cheat only
+//Cheat only
+// -------------------------------------------------------
+//Noclip
 alias +noclip noclip
 alias -noclip noclip
-
-//Build a sentry. cheat only
+//Build a sentry
 alias sentry "ent_create obj_sentrygun; ent_fire !picker setbuilder !player"
+// -------------------------------------------------------
 
 //Micspam
+// -------------------------------------------------------
 alias vtoggle "von"
 alias von "+voicerecord; voice_loopback 1; alias vtoggle voff"
 alias voff "-voicerecord; voice_loopback 0; alias vtoggle von"
+// -------------------------------------------------------
 
 //Quickwep
+// -------------------------------------------------------
 alias +qwep lastinv
 alias -qwep lastinv
+// -------------------------------------------------------
 
-//Fix
-alias fix "record a; stop; hud_reloadscheme"
-
-//Disables movement
-alias cancelmovement "-attack; -attack2; -forward; -back; -duck; -right; -left; -moveleft; -moveright"
+//Fix for various graphical glitches
+// -------------------------------------------------------
+alias fix "stop; prec_record; hud_reloadscheme; snd_restart"
+// -------------------------------------------------------
 
 //Shows net graph when viewing scores
-bind tab "+showscores"
-bind tab "+showgraph"
-alias "+showgraph" "+showscores;net_graph 3;r_renderoverlayfragment 1; mp_showrespawntimes"
-alias "-showgraph" "-showscores;net_graph 1;r_renderoverlayfragment 0"
+// -------------------------------------------------------
+alias "+showgraph" "+showscores;net_graph 3;r_renderoverlayfragment 1"
+alias "-showgraph" "-showscores;net_graph 1;r_renderoverlayfragment 0; timeleft"
+// -------------------------------------------------------
 
-//P-rec
+//P-REC
+// -------------------------------------------------------
 alias prec_comp_1 "prec_mode 2; prec_delete_useless_demo 0; cc_emit #prec_comp_1"
 alias prec_comp_0 "prec_mode 3; prec_delete_useless_demo 1; cc_emit #prec_comp_0"
 prec_mode 3
@@ -234,5 +255,20 @@ prec_notify 2
 prec_min_streak 4
 prec_delete_useless_demo 1
 prec_dir "demos"
+// -------------------------------------------------------
 
-echo "executing autoexec.cfg"
+//Prints stats to console
+// -------------------------------------------------------
+alias println "echo -------------------------------------------------------"
+println
+echo "                      Memory stats                     "
+println
+memory
+echo ""
+println
+echo "                      Code support                     "
+println
+r_3dnow
+r_sse2
+println
+// -------------------------------------------------------
