--- a/cfg/gfx/highframes.cfg
+++ b/cfg/gfx/highframes.cfg
@@ -1,7 +1,7 @@
 // Unexplained crashes? Try changing mat_queue_mode to `-1'.
 // ----------------------------------------------------------------------------
 // Chris' highframes config, designed to get you a large performance boost
-// v2.015 | 1 November 2012 | fakkelbrigade.eu/chris/configs/
+// v2.016 | 25 January 2013 | fakkelbrigade.eu/chris/configs/
 // ----------------------------------------------------------------------------
 // Problems or questions? Contact me at #christf2 on QuakeNet.
 // ----------------------------------------------------------------------------
@@ -31,8 +31,8 @@
 // keep that value stable without regular drops.
 // ----------------------------------------------------------------------------
 cl_showfps 1 // Show unsmoothed FPS meter
-//fps_max 121 // Commented due to 2011-09-02 update causing jittering when fps is capped for some
-fps_max 121
+//fps_max 132 // Commented due to 2011-09-02 update causing jittering when fps is capped for some
+fps_max 0
 
 // ----------------------------------------------------------------------------
 // Net settings
@@ -86,12 +86,12 @@ fps_max 121
 // ----------------------------------------------------------------------------
 
 // Disable sprays
-//cl_playerspraydisable 1
-//r_spray_lifetime 0
+cl_playerspraydisable 1
+r_spray_lifetime 0
 
 // Enable sprays -- uncomment this section if you want these settings
-cl_playerspraydisable 0
-r_spray_lifetime 2
+//cl_playerspraydisable 0
+//r_spray_lifetime 2
 
 // ----------------------------------------------------------------------------
 // Shadows
@@ -112,24 +112,23 @@ r_shadows 0
                             // performance loss from setting this to `1'.
 //r_shadows 1
 
-
 // ----------------------------------------------------------------------------
 // Facial features
 // ----------------------------------------------------------------------------
 
 // Disable facial features
-//r_eyes 0
-//r_flex 0
-//r_lod 2
-//r_rootlod 2
-//r_teeth 0
+r_eyes 0
+r_flex 0
+r_lod 2
+r_rootlod 2
+r_teeth 0
 
 // Enable facial features -- uncomment this section if you want these settings
-r_eyes 1
-r_flex 1
-r_lod 1 // Needs to be set to 1, otherwise they will still be disabled.
-r_rootlod 1
-r_teeth 1
+//r_eyes 1
+//r_flex 1
+//r_lod 1 // Needs to be set to 1, otherwise they will still be disabled.
+//r_rootlod 1
+//r_teeth 1
 
 // ----------------------------------------------------------------------------
 // Ragdolls
@@ -145,9 +144,8 @@ g_ragdoll_fadespeed 0
 g_ragdoll_lvfadespeed 0
 ragdoll_sleepaftertime 0
 
-
 // Enable ragdolls -- uncomment this section if you want these settings
-//cl_ragdoll_fade_time 1
+//cl_ragdoll_fade_time 15
 //cl_ragdoll_forcefade 0
 //cl_ragdoll_physics_enable 1
 //g_ragdoll_fadespeed 600
@@ -186,7 +184,7 @@ cl_detaildist 0
 cl_detailfade 0
 cl_drawmonitors 0
 cl_ejectbrass 0
-cl_jiggle_bone_framerate_cutoff 1 // Turns on jigglebones
+cl_jiggle_bone_framerate_cutoff 0 // Turns off jigglebones
 cl_new_impact_effects 0
 cl_show_splashes 0
 func_break_max_pieces 0
@@ -222,7 +220,6 @@ mat_specular 1 // Controls specularity. Setting this to 0 will make ubers
                // result in some strange `fire' textures replacing their
                // appropriate counterparts, especially on medals, and certain
                // hats.
-			   // TWEAK.
 mat_trilinear 1
 mat_viewportscale 1 // Almost no performance gain from viewport upscaling.
 mat_viewportupscale 1
@@ -266,8 +263,8 @@ tf_particles_disable_weather 1 // Disable weather effects on maps supporting
                                // it, for example, setting this to `1'
                                // disables rain effects on *_sawmill.
 tracer_extra 0
-violence_ablood 0
-violence_hblood 0
+violence_ablood 1 // Setting ablood/hblood to 1 actually improves perf usually
+violence_hblood 1
 
 // ----------------------------------------------------------------------------
 // Misc
@@ -276,7 +273,7 @@ in_usekeyboardsampletime 0
 mat_clipz 1 // FX card users should set this to 0
 mat_forcehardwaresync 0
 mat_levelflush 1
-m_rawinput 1 // Turn on raw mouse input. Commented out by default due to
+//m_rawinput 1 // Turn on raw mouse input. Commented out by default due to
                // silly incompatibility with the Xfire overlay. You should use
                // it if you can!
 mat_vsync 0 // Turn off vsync to avoid nasty I/O latency.
@@ -309,7 +306,7 @@ snd_spatialize_roundrobin 1
 // ----------------------------------------------------------------------------
 // Threading
 // ----------------------------------------------------------------------------
-mat_queue_mode -1 // mat_queue mode is another frequently asked about cvar, it
+mat_queue_mode 2 // mat_queue mode is another frequently asked about cvar, it
                  // defines the threading method to be used by the material
                  // system. It has been unstable to use in the past, but
                  // nowadays it's generally okay.
@@ -341,7 +338,7 @@ r_threaded_renderables 1
 // ----------------------------------------------------------------------------
 // Misc
 // ----------------------------------------------------------------------------
-cl_forcepreload 0 // Force preloading ****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************
+cl_forcepreload 1 // Force preloading
 
 // ----------------------------------------------------------------------------
 // Print to console
@@ -352,4 +349,4 @@ echo "-------------------------------------------------------"
 echo "Please direct all comments/queries/whatnot to"
 echo "#christf2 on QuakeNet."
 
-echo "executing highframes.cfg"
+exec ./gfx/post_highframes
