--- a/cfg/okai/demoman_binds.cfg
+++ b/cfg/okai/demoman_binds.cfg
@@ -12,7 +12,7 @@ bind "9" "slot9"
 
 //Mouse
 bind "MOUSE1" "+attack"
-bind "MOUSE2" "+m2"
+bind "MOUSE2" "+attack2"
 bind "MOUSE3" ""
 bind "MWHEELUP" "voicemenu 1 1"
 bind "MWHEELDOWN" "voicemenu 0 1"
@@ -110,7 +110,7 @@ bind "F11" "status"
 bind "F12" "toggle r_drawviewmodel"
 
 //The keys above arrows
-bind "INS" "" // Insert
+bind "INS" "wait_check" // Insert
 bind "HOME" "remove_red_ammo" // Home
 bind "PGUP" "" // Page Up
 bind "DEL" "" // Delete
