--- a/cfg/okai/engineer_binds.cfg
+++ b/cfg/okai/engineer_binds.cfg
@@ -110,7 +110,7 @@ bind "F11" "status"
 bind "F12" "toggle r_drawviewmodel"
 
 //The keys above arrows
-bind "INS" "" // Insert
+bind "INS" "wait_check" // Insert
 bind "HOME" "remove_red_ammo" // Home
 bind "PGUP" "" // Page Up
 bind "DEL" "" // Delete
