--- a/cfg/gfx/maxframes.cfg
+++ b/cfg/gfx/maxframes.cfg
@@ -1,7 +1,7 @@
 // Unexplained crashes? Try changing mat_queue_mode to `-1'.
 // ----------------------------------------------------------------------------
 // Chris' maxframes config, designed to get you a large performance boost
-// v2.015 | 1 November 2012 | fakkelbrigade.eu/chris/configs/
+// v2.016 | 25 January 2013 | fakkelbrigade.eu/chris/configs/
 // ----------------------------------------------------------------------------
 // Problems or questions? Contact me at #christf2 on QuakeNet.
 // ----------------------------------------------------------------------------
@@ -86,12 +86,12 @@ fps_max 0
 // ----------------------------------------------------------------------------
 
 // Disable sprays
-//cl_playerspraydisable 1
-//r_spray_lifetime 0
+cl_playerspraydisable 1
+r_spray_lifetime 0
 
 // Enable sprays -- uncomment this section if you want these settings
-cl_playerspraydisable 0
-r_spray_lifetime 2
+//cl_playerspraydisable 0
+//r_spray_lifetime 2
 
 // ----------------------------------------------------------------------------
 // Shadows
@@ -184,7 +184,7 @@ cl_detaildist 0
 cl_detailfade 0
 cl_drawmonitors 0
 cl_ejectbrass 0
-cl_jiggle_bone_framerate_cutoff 1 // Turns off jigglebones
+cl_jiggle_bone_framerate_cutoff 0 // Turns off jigglebones
 cl_new_impact_effects 0
 cl_show_splashes 0
 func_break_max_pieces 0
@@ -226,7 +226,7 @@ mat_viewportupscale 1
 mat_wateroverlaysize 1
 mp_decals 1 // `9' is a good value to still see the spread pattern from a
             // scattergun without any real performance loss.
-r_3dsky 1 //Changed to 1 so I could see my fucking skybox
+r_3dsky 0
 r_ambientboost 0
 r_ambientfactor 0
 r_ambientmin 0
@@ -263,8 +263,8 @@ tf_particles_disable_weather 1 // Disable weather effects on maps supporting
                                // it, for example, setting this to `1'
                                // disables rain effects on *_sawmill.
 tracer_extra 0
-violence_ablood 0
-violence_hblood 0
+violence_ablood 1 // Setting ablood/hblood to 1 actually improves perf usually
+violence_hblood 1
 
 // ----------------------------------------------------------------------------
 // Misc
@@ -348,5 +348,3 @@ echo "            Chris' maxframes config loaded.            "
 echo "-------------------------------------------------------"
 echo "Please direct all comments/queries/whatnot to"
 echo "#christf2 on QuakeNet."
-
-echo "executing maxframes.cfg"
