--- a/cfg/okai/medic_binds.cfg
+++ b/cfg/okai/medic_binds.cfg
@@ -1,8 +1,8 @@
 //Slots
 bind "0" "slot10"
-bind "1" "slot1"
-bind "2" "slot2"
-bind "3" "slot3"
+bind "1" "-attack; slot1; autoheal.slot.1"
+bind "2" "slot2; autoheal.slot.2"
+bind "3" "-attack; slot3; autoheal.slot.1"
 bind "4" "slot4"
 bind "5" "slot5"
 bind "6" "slot6"
@@ -110,7 +110,7 @@ bind "F11" "status"
 bind "F12" "toggle r_drawviewmodel"
 
 //The keys above arrows
-bind "INS" "" // Insert
+bind "INS" "wait_check" // Insert
 bind "HOME" "remove_red_ammo" // Home
 bind "PGUP" "" // Page Up
 bind "DEL" "" // Delete
