--- a/cfg/okai/timer.cfg
+++ b/cfg/okai/timer.cfg
@@ -6,7 +6,7 @@ alias starttimer "ent_fire jtimer enable;ent_fire jtimer2 enable;ent_fire jtimer
 alias pausetimer "ent_fire jtimer2 fireuser2"
 alias resettimer "ent_fire jtimer2 fireuser2;ent_fire jcounter setvalue 0;ent_fire jcounter2 setvalue 0;ent_fire jcounter_temp setvalue 0;ent_fire jcounter3 setvalue 0"
 
-exec ./timer/timer1
-wait 65;exec ./timer/timer2
-wait 110;exec ./timer/timer3
+exec ./okai/timer1
+wait 65;exec ./okai/timer2
+wait 110;exec ./okai/timer3
 wait 170;echo "I love choco so much I want to sacrifice a goat to earn his favor!"
