--- a/cfg/okai/pyro_binds.cfg
+++ b/cfg/okai/pyro_binds.cfg
@@ -91,7 +91,7 @@ bind "KP_PGUP" "join_class spy" // 9
 bind "KP_ENTER" "toggle voice_loopback" // enter
 bind "KP_DEL" "" // delete (.)
 bind "KP_PLUS" "toggle r_renderoverlayfragment" // +
-bind "KP_MINUS" "c_t" // -
+bind "KP_MINUS" "corpse_toggle" // -
 bind "KP_MULTIPLY" "dropitem" // *
 bind "KP_SLASH" "build 3 0" // /
 
